--- a/TestApi/pom.xml
+++ b/TestApi/pom.xml
@@ -15,13 +15,18 @@
         <artifactId>rest-assured</artifactId>
         <version>2.9.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.clerezza.ext/org.json.simple -->
+    <dependency>
+        <groupId>org.apache.clerezza.ext</groupId>
+        <artifactId>org.json.simple</artifactId>
+        <version>0.4</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
     <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
         <version>6.11</version>
     </dependency>
-
     <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-all</artifactId>
@@ -33,6 +38,7 @@
         <version>2.6.2</version>
     </dependency>
 </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -44,7 +50,47 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
+            <!-- Maven Assembly Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4.1</version>
+                <configuration>
+                    <!-- get all project dependencies -->
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <!-- MainClass in mainfest make a executable jar -->
+                    <archive>
+                        <manifest>
+                            <mainClass>utils.readJSON</mainClass>
+                        </manifest>
+                    </archive>
+
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <!-- bind to the packaging phase -->
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
 
     </build>
+    <!-- One-Jar is in the googlecode repository -->
+    <pluginRepositories>
+        <pluginRepository>
+            <id>onejar-maven-plugin.googlecode.com</id>
+            <url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url>
+        </pluginRepository>
+    </pluginRepositories>
+
+
+
 </project>
